Removed deprecated URL constructor usage (#1102)
Signed-off-by: dhoard <doug.hoard@gmail.com>